# osux-lib

./: .gitignore  AUTHORS  Makefile.am  PKGBUILD  README.md  common.mk  configure.ac  osux-0.1.pc.in
po/: .gitignore  POTFILES.in  fr.gmo  fr.po  osux.pot
scripts/: build_debug.sh  msys2_dep_install.sh
src/: Makefile.am
src/include/: Makefile.am  osux.h
src/include/osux/: beatmap.h  beatmap_database.h  color.h  combo.h  compiler.h  database.h  error.h  event.h  hash_table.h  hit.h  hitobject.h  hitsound.h  keys.h  list.h  replay.h  sum.h  timingpoint.h  util.h
src/lib/beatmap/: Makefile.am  beatmap.c  beatmap_old.c  combo.c  event.c  hitobject.c  hitsound.c  taiko_autoconvert.c
src/lib/database/: Makefile.am
src/lib/replay/: hit.c  replay.c
src/lib/util/: yaml.c
